--- a/sections/features.html
+++ b/sections/features.html
@@ -87,7 +87,6 @@
     .feature-card:nth-child(3) { animation-delay: 0.3s; }
     .feature-card:nth-child(4) { animation-delay: 0.4s; }
     .feature-card:nth-child(5) { animation-delay: 0.5s; }
-    .feature-card:nth-child(6) { animation-delay: 0.6s; }
     
     @media (max-width: 768px) {
         .feature-card .card-body {
@@ -151,18 +150,6 @@
                     <div class="card feature-card h-100">
                         <div class="card-body">
                             <div class="feature-icon">
-                                <i class="fas fa-code-branch icon-fallback" data-fallback="🔀"></i>
-                            </div>
-                            <h5>레거시 시스템 개선</h5>
-                            <p><strong>7년간 누적된 다양한 코딩 스타일</strong>을 통합하고 리팩토링하여 시스템 안정성을 확보했습니다. 기술 부채 해결 및 코드 품질 개선에 대한 실무 경험이 풍부합니다.</p>
-                        </div>
-                    </div>
-                </div>
-    
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="card feature-card h-100">
-                        <div class="card-body">
-                            <div class="feature-icon">
                                 <i class="fas fa-cloud-upload-alt icon-fallback" data-fallback="☁️"></i>
                             </div>
                             <h5>하이브리드 인프라 경험</h5>
@@ -175,10 +162,10 @@
                     <div class="card feature-card h-100">
                         <div class="card-body">
                             <div class="feature-icon">
-                                <i class="fas fa-chalkboard-teacher icon-fallback" data-fallback="👨‍🏫"></i>
+                                <i class="fas fa-cogs icon-fallback" data-fallback="⚙️"></i>
                             </div>
-                            <h5>교육 서비스 도메인 전문성</h5>
-                            <p><strong>에듀테크</strong> 분야에서 초등학생 대상 학습 플랫폼 개발을 통해 교육 서비스에 대한 깊은 이해도를 갖고 있습니다. 사용자 친화적 서비스 설계 경험이 풍부합니다.</p>
+                            <h5>도메인 무관 개발 역량</h5>
+                            <p><strong>SI 개발부터 서비스 플랫폼</strong>까지 다양한 환경에서의 개발 경험을 통해 어떤 도메인에서도 빠르게 적응하고 성과를 낼 수 있는 개발 전문성을 보유하고 있습니다.</p>
                         </div>
                     </div>
                 </div>
