--- a/sections/summary.html
+++ b/sections/summary.html
@@ -56,7 +56,7 @@
     }
     
     .summary-card::before {
-        content: '💭';
+        content: '';
         position: absolute;
         top: 1rem;
         right: 1.5rem;
