--- a/sections/experience.html
+++ b/sections/experience.html
@@ -287,16 +287,21 @@
                             2017.04 - 2019.07 (2년 4개월)
                         </div>
                     </div>
-                    <p class="job-title">백엔드 개발자 - 금융권 솔루션 개발</p>
+                    <p class="job-title">백엔드 개발자 - SI 솔루션(CMS) 개발/유지보수수</p>
     
                     <div class="achievement-section">
-                        <h5><i class="fas fa-university icon-fallback" data-fallback="🏛"></i> 금융권 솔루션 개발</h5>
+                        <h5><i class="fas fa-university icon-fallback" data-fallback="🏛"></i> SI 솔루션(CMS) 개발/유지보수수</h5>
                         <ul class="achievement-list">
-                            <li><strong>현대캐피탈 CMS:</strong> 카테고리 세분화, 파일 삭제 방지, 히스토리 기능</li>
+                            <li><strong>현대캐피탈 CMS:</strong><br>
+                                카테고리 세분화 기능 추가<br>
+                                파일 삭제 방지 기능 추가<br>
+                                파일 히스토리 기능 추가</li>
                             <li><strong>삼성카드:</strong> 인생락서 기능 개발, RESTful API 개발 및 앱 연동</li>
                             <li><strong>대웅제약:</strong> FreeMarker 사용 인트라넷 홈페이지 리뉴얼</li>
-                            <li><strong>통합계정 연동:</strong> Active Directory 연동 자동 로그인 처리</li>
-                            <li><strong>컨텐츠 관리:</strong> 다중 카테고리 일괄 배포 시스템 구현</li>
+                            <li><strong>현대 카드 CMS:</strong><br>
+                                Active Directory 연동 자동 로그인 처리<br>
+                                다중 카테고리 일괄 배포 시스템 구현</li>
+                            <li><strong>CMS 유지보수:</strong> 성북구청, 현대카드, 현대캐피탈, 삼성카드, 국민건강보험공단, 재외동포재단</li>
                         </ul>
                     </div>
     
